--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
+    "@angular/fire": "^6.0.4",
     "@angular/forms": "~10.0.9",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
@@ -26,6 +27,7 @@
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "concurrently": "^5.3.0",
+    "firebase": "^8.0.1",
     "json-server": "^0.16.2",
     "npm": "^6.14.8",
     "rxjs": "~6.5.5",
